# mars_astrobio

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CTX_ISIS3_EXAMPLE.md  DATA_PIPELINE_README.md  DOWNLOAD_COMPARISON.md  DOWNLOAD_SUMMARY.md  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  IMPORTANT_API_UPDATE.md  ISIS3_SETUP.md  LICENSE  MARS_RAW_UTILS_SETUP.md  MOTION_FEATURES_SUMMARY.md  PDS_PIPELINE_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_ISIS3.md  QUICK_START.md  README.md  SETUP_API_KEY.md  USING_MARS_NASA_GOV.md  check_api.py  check_images.py  check_tif.py  cheyava_falls_urls.txt  cheyava_falls_urls_expanded.txt  download_cheyava.py  download_cheyava_direct.py  experiment_notes.md  nohup.out  print.prt  pyproject.toml  setup_isis3.sh  test_api.py  test_download.py  test_full_pipeline.py  test_img_converter.py  test_mars_api.py  (+1 more)
.claude/: .nfs07a65027fed67ee2000010ab  .nfs712af0d8fe5299df000010a8  .nfs7c8c42ddf82e0fe4000010a9  .nfs956cb84571680969000010aa  .nfsaddc1df7e7f8162f000010ac  settings.local.json
configs/: default.yaml
configs/data/: watson.yaml
configs/experiments/: exp001_watson_baseline.yaml
configs/models/unsupervised/: simclr.yaml
configs/pipelines/: backyard_worlds.yaml  backyard_worlds_motion.yaml  backyard_worlds_movers.yaml  ctx_terrain.yaml
configs/training/: temporal_detector.yaml
data/: README.md  subjects_metadata.csv
data/annotations/: README.md
data/backyard_worlds/: subjects_metadata.csv
data/backyard_worlds/ground_truth/: README.md  annotations.json  subjects_groundtruth_metadata.csv
data/cache/: README.md
data/cheyava_falls/: README.md
data/processed/: README.md
data/raw/: README.md
docs/: BROWSE_VS_FULL_DATA.md  RDR_vs_EDR.md  URL_SOURCES.md  WHY_DIFFERENT_IMAGES.md  temporal_crop_classifier.md  temporal_detector_experiments.md
models/: README.md
models/checkpoints/: README.md
models/production/: README.md
outputs/: README.md
scripts/: calibrate_diff_blob_baseline.py  convert_watson_to_png.py  diff_blob_tracklet_baseline.py  download_backyard_worlds.py  download_backyard_worlds_classifications.py  download_cheyava_automatic.py  download_data.py  download_from_mars_nasa_gov.py  download_full_mission.py  download_mars_official.py  download_pds_atlas.py  download_sol_1217.py  export_crop_windows.py  export_threshold_gifs.py  generate_synthetic_groundtruth.py  infer_crop_classifier.py  infer_crop_heatmap.py  inspect_fold_heatmaps.py  prepare_ground_truth_training.py  process_zooniverse_classifications.py  render_diff_blob_overlays.py  render_motion_overlays.py  run_toprand_training_pipeline.sh  sample_training_crops.py  train_crop_classifier.py  train_temporal_detector.py  visualize_crop_samples.py
src/mars_biosig/: __init__.py  __version__.py
src/mars_biosig/data/: dataset.py  mars2020_api.py  pds_client.py  transforms.py
src/mars_biosig/data/downloaders/: watson.py
src/mars_biosig/data/parsers/: img_converter.py  pds4_parser.py
src/mars_biosig/models/unsupervised/: __init__.py  contrastive.py
src/mars_biosig/training/: __init__.py  base_trainer.py  unsupervised_trainer.py
src/mars_biosig/utils/: config.py
src/scientific_pipelines/astronomy/backyard_worlds/: __init__.py  brown_dwarf_scorer.py  downloader.py  motion_features.py  motion_sequence_encoder.py  moving_object_scorer.py  pipeline.py  scripts.py  sequence_encoder.py
src/scientific_pipelines/core/clustering/: __init__.py  hdbscan_clusterer.py  novelty.py
src/scientific_pipelines/core/embeddings/: __init__.py  base.py  dinov2.py  dinov3.py  pipeline.py
src/scientific_pipelines/core/training/datasets/: __init__.py  augmentation.py  crop_config.py  temporal_crop_dataset.py  temporal_dataset.py
src/scientific_pipelines/core/training/losses/: __init__.py  detection_loss.py
src/scientific_pipelines/core/training/metrics/: __init__.py  detection_metrics.py
src/scientific_pipelines/core/training/models/: __init__.py  temporal_crop_classifier.py  temporal_detector.py
src/scientific_pipelines/planetary/mars/ctx/: __init__.py  downloader.py  pipeline.py  scripts.py  tiling.py
